deploy/kubernetes/dashboard-samudai.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp
  annotations:
    prometheus.io/probe: "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  revisionHistoryLimit: 1
  replicas: 6
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: ghcr.io/samudai/dashboard-samudai:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: webapp
          resources:
            limits:
              cpu: 50m
