deploy/kubernetes/gateway-consumer.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-consumer-node
  labels:
    app: gateway-consumer-node
  annotations:
    externalTrafficPolicy: Local
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: gateway-consumer-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-consumer-node
spec:
  selector:
    matchLabels:
      app: gateway-consumer-node
  revisionHistoryLimit: 2
  replicas: 7
  strategy:
    rollingUpdate:
      maxSurge: 8
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: gateway-consumer-node
    spec:
      containers:
        - name: gateway-consumer-node
          image: ghcr.io/samudai/gateway-consumer-node:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 100m
