deploy/kubernetes/service-activity.yml
apiVersion: v1
kind: Service
metadata:
  name: service-activity
  labels:
    app: service-activity
  annotations:
    prometheus.io/probe: 'true'
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: service-activity
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-activity
spec:
  selector:
    matchLabels:
      app: service-activity
  revisionHistoryLimit: 2
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 4
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: service-activity
    spec:
      containers:
      - name: service-activity
        image: ghcr.io/samudai/service-activity:latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
        ports:
          - containerPort: 8080
        resources:
          limits:
            cpu: 50m
