deploy/kubernetes/service-dao.yml
apiVersion: v1
kind: Service
metadata:
  name: service-dao
  labels:
    app: service-dao
  annotations:
    prometheus.io/probe: "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: service-dao
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-dao
spec:
  selector:
    matchLabels:
      app: service-dao
  revisionHistoryLimit: 2
  replicas: 4
  strategy:
    rollingUpdate:
      maxSurge: 5
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: service-dao
    spec:
      containers:
        - name: service-dao
          image: <IMAGE>
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
              name: service-dao
          resources:
            limits:
              cpu: 50m
