deploy/kubernetes/service-discord.yml
apiVersion: v1
kind: Service
metadata:
  name: service-discord
  labels:
    app: service-discord
  annotations:
    prometheus.io/probe: "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: service-discord
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-discord
spec:
  selector:
    matchLabels:
      app: service-discord
  revisionHistoryLimit: 2
  replicas: 5
  strategy:
    rollingUpdate:
      maxSurge: 4
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: service-discord
    spec:
      containers:
        - name: service-discord
          image: <IMAGE>
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
              name: service-discord
          resources:
            limits:
              cpu: 100m
