deploy/kubernetes/service-job.yml
apiVersion: v1
kind: Service
metadata:
  name: service-job
  labels:
    app: service-job
  annotations:
    prometheus.io/probe: "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: service-job
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-job
spec:
  selector:
    matchLabels:
      app: service-job
  revisionHistoryLimit: 1
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: service-job
    spec:
      containers:
        - name: service-job
          image: ghcr.io/samudai/service-job:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
              name: service-job
          resources:
            limits:
              cpu: 50m
