deploy/kubernetes/service-node.yml
apiVersion: v1
kind: Service
metadata:
  name: service-node
  labels:
    app: service-node
  annotations:
    prometheus.io/probe: "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: service-node
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-node
spec:
  selector:
    matchLabels:
      app: service-node
  revisionHistoryLimit: 2
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: service-node
    spec:
      containers:
        - name: service-node
          image: ghcr.io/samudai/service-node:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
              name: service-node
          resources:
            limits:
              cpu: 100m
