deploy/kubernetes/telegram-bot.yml
apiVersion: v1
kind: Service
metadata:
  name: telegram-bot
  labels:
    app: telegram-bot
  annotations:
    prometheus.io/probe: "true"
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: telegram-bot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegram-bot
spec:
  selector:
    matchLabels:
      app: telegram-bot
  revisionHistoryLimit: 2
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: telegram-bot
    spec:
      containers:
        - name: telegram-bot
          image: ghcr.io/samudai/telegram-bot:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 150m
